# f-k-hdu-compiler

lab2/: .gitignore  main.py  pyproject.toml
lab2/cangjie/: README.md  cjpm.toml
lab2/cangjie/src/: dfa.cj  main.cj  nfa.cj  regex.cj  state.cj
lab2/lab2/: __init__.py  dfa.py  nfa.py  regex.py  state.py
lab2/result/: dfa_(ab)＊｜c+  dfa_(a｜b)+  dfa_(a｜b)＊  dfa_(a｜b)＊abb  dfa_a(b｜c)  dfa_ab+c？  dfa_a｜c  dfa_b(a｜b)＊aa  dfa_minimize_(ab)＊｜c+  dfa_minimize_(a｜b)+  dfa_minimize_(a｜b)＊  dfa_minimize_(a｜b)＊abb  dfa_minimize_a(b｜c)  dfa_minimize_ab  dfa_minimize_ab+c？  dfa_minimize_a｜c  dfa_minimize_b(a｜b)＊aa  nfa_(ab)＊｜c+  nfa_(a｜b)+  nfa_(a｜b)＊  nfa_(a｜b)＊abb  nfa_a(b｜c)  nfa_ab+c？  nfa_a｜c  nfa_b(a｜b)＊aa
lab3/: main.py  pyproject.toml
lab3/lab3/: cfg.py  trie.py
lab3/tests/: test_cfg.py  test_trie.py
