[project]
name = "lab3"
version = "0.1.0"
description = "Compilation Principles lab 3"
authors = [{ name = "focused_xy", email = "elpsycongroo242@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.*"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
follow_imports = "normal"
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
